terraform/vpc.tf
resource "vpc" "main" {
  cidr_block ="10.0.0.0/16"
  enable_dns_support = true
  enable_dns_hostname = true

  tags ={
    Name = "main-vpc"
  }
}
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
}
